Backend: add instructors controller and listing function
